# aocweb-2022

./: .gitignore  Cargo.toml  package-lock.json  package.json
.github/workflows/: aoclib.yml  react-gh-pages.yml
aocbin/: Cargo.toml
aocbin/src/: day01.rs  day04.rs  day05.rs  main.rs
aoclib/: Cargo.toml
aoclib/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  lib.rs  main.rs  template.rs
src/: AocMenu.js  App.js  index.js  lib.rs
src/routes/: Day01.js  Index.js  Root.js
www/: craco.config.js  package.json
www/public/: index.html
www/src/: AocMenu.js  App.css  App.js  Error404.js  index.js
www/src/routes/: Day01.js  Day02.js
