[package]
name = "aocbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"           # The name of the target.
path = "src/day01.rs"    # The source file of the target.

[[bin]]
name = "day04"           # The name of the target.
path = "src/day04.rs"    # The source file of the target.

[dependencies]
aoclib = { path = "../aoclib" }
