[package]
name = "aocbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc-2022"
path = "src/main.rs"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[dependencies]
aoclib = { path = "../aoclib" }
regex = "1"
